cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG -march=native)
set(CMAKE_CXX_FLAGS_RELEASE -march=native)
project(myprogram)
set(MYPROGRAM_FILES db.cpp em.cpp)
add_executable( imp imp.cpp ${MYPROGRAM_FILES})
add_executable( emtest emtest.cpp ${MYPROGRAM_FILES})
add_executable( dbtest dbtest.cpp ${MYPROGRAM_FILES})
add_executable(main main.cpp)
